First commit .net core

--- a/RazorPagesMovie/appsettings.json
+++ b/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-dafc5d5c-06dd-4a1d-a557-100ef868b6aa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
